added home page

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,4 @@
+
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
 	      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
@@ -5,7 +6,7 @@
 	      version="2.5">
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
-  	<servlet-name>Main</servlet-name>
+  	<servlet-name>Settings</servlet-name>
   	<servlet-class>controllers.SettingsCtrl</servlet-class>
   </servlet>
   <servlet>
@@ -20,7 +21,7 @@
   	<servlet-class>controllers.GameCtrl</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>Main</servlet-name>
+  	<servlet-name>Settings</servlet-name>
   	<url-pattern>/Settings</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
